# BookTrackerApp

./: .gitignore  README.md  books.py  pyproject.toml
.github/workflows/: test_lint.yml
locust/: Locust_2026-04-12-15h08_locustfile.py_http___localhost_8080.html  locustfile.py
src/backend/: app.py
src/backend/api/: dependencies.py  initialize.py
src/backend/api/routes/: auth.py  books.py
src/backend/api/schemas/: auth.py  book.py
src/backend/database/: connection.py  migrations.sql
src/backend/database/migrations/: 001_init.sql
src/backend/database/models/: book.py  user.py
src/backend/database/repository/: books.py  users.py
src/backend/routes/: auth.py
src/frontend/: api.py  app.py  constants.py  ui_helpers.py
test/: conftest.py  test_auth_dependencies.py  test_auth_endpoints.py  test_book_endpoints.py  test_book_repository.py  test_frontend_api.py  test_frontend_app.py  test_ui_helpers.py  test_user_repository.py
